--- a/src/app/pages/video-home/video-home.component.html
+++ b/src/app/pages/video-home/video-home.component.html
@@ -1,1 +1,16 @@
-<p>video-home works!</p>
+<div class="backgroung">
+  <p>推薦影片</p>
+  <div class="card_box">
+    <div class="card" *ngFor="let cardItem of cardList">
+      <div class="card_img">
+        <img [src]="cardItem.img" alt="">
+        <i class="far fa-star" [ngClass]="cardItem.isCollect?'fas':'far'" (click)="collectButton(cardItem)"></i>
+        <div class="card_img_duration">{{cardItem.duration}}</div>
+      </div>
+      <div class="card_content">
+        <div class="card_content_title">{{cardItem.title}}</div>
+        <div class="card_content_description">{{cardItem.description}}</div>
+      </div>
+    </div>
+  </div>
+</div>
