--- a/src/app/pages/video-home/video-home.component.scss
+++ b/src/app/pages/video-home/video-home.component.scss
@@ -11,7 +11,9 @@
   justify-content: space-between;
   background-color: #f9f9f9;
 }
-.card_img{
+.card_img {
+  width: 320px;
+  height: 180px;
   cursor: pointer;
 }
 .card_img_duration {
@@ -20,7 +22,7 @@
   width: 40px;
   height: 18px;
   position: relative;
-  top: -25px;
+  top: -50px;
   left: 278px;
   text-align: center;
   line-height: 18px;
@@ -29,14 +31,14 @@
 .far {
   color: #d0cdcd;
   position: relative;
-  right: 25px;
-  top: -160px;
+  right: -7px;
+  top: -180px;
 }
 .fas {
   color: #f7b704;
   position: relative;
-  right: 25px;
-  top: -160px;
+  right: -7px;
+  top: -180px;
 }
 .card_content {
   width: 320px;
@@ -63,4 +65,32 @@
   white-space: normal;
   -webkit-line-clamp: 8;
   margin-bottom: 5px;
+}
+.footer {
+  margin: 0 auto;
+  width: max-content;
+}
+
+::ng-deep jw-pagination ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+::ng-deep jw-pagination li {
+  border: solid 1px #bbbbbb;
+  border-radius: 5px;
+  padding: 0 10px;
+  cursor: pointer;
+}
+::ng-deep jw-pagination li.active {
+  background: #007BFF;
+}
+
+@media screen and (max-width: 380px) {
+  .backgroung {
+    width: 100%;
+  }
+  .footer {
+    width: 100%;
+  }
 }
