--- a/src/app/pages/video-collect/video-collect.component.html
+++ b/src/app/pages/video-collect/video-collect.component.html
@@ -1,4 +1,6 @@
 <div class="backgroung">
+  <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-clip-rotate-multiple"
+    [fullScreen]="true"></ngx-spinner>
   <p>推薦影片</p>
   <div class="card_box">
     <div class="card" *ngFor="let cardItem of pageOfItems">
