--- a/src/app/pages/video-collect/video-collect.component.scss
+++ b/src/app/pages/video-collect/video-collect.component.scss
@@ -1,15 +1,14 @@
 .backgroung {
   margin: 0 auto;
-  width: 80%;
-}
-.card {
-  margin: 20px;
+  max-width: 1440px;
 }
 .card_box {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   background-color: #f9f9f9;
+}
+.card {
+  margin: 20px;
 }
 .card_img {
   width: 320px;
@@ -83,7 +82,7 @@
   cursor: pointer;
 }
 ::ng-deep jw-pagination li.active {
-  background: #007BFF;
+  background: #007bff;
 }
 
 @media screen and (max-width: 380px) {
