--- a/src/app/pages/video-collect/video-collect.component.scss
+++ b/src/app/pages/video-collect/video-collect.component.scss
@@ -2,18 +2,18 @@
   margin: 0 auto;
   max-width: 1440px;
 }
+.card {
+  margin: 20px;
+  cursor: pointer;
+}
 .card_box {
   display: flex;
   flex-wrap: wrap;
   background-color: #f9f9f9;
 }
-.card {
-  margin: 20px;
-}
 .card_img {
   width: 320px;
   height: 180px;
-  cursor: pointer;
 }
 .card_img_duration {
   background-color: #151b1b;
@@ -82,7 +82,7 @@
   cursor: pointer;
 }
 ::ng-deep jw-pagination li.active {
-  background: #007bff;
+  background: #007BFF;
 }
 
 @media screen and (max-width: 380px) {
