--- a/src/app/pages/video-home/video-home.component.scss
+++ b/src/app/pages/video-home/video-home.component.scss
@@ -71,12 +71,12 @@
   margin: 0 auto;
   width: max-content;
 }
-
 .modal {
   display: block;
   word-break: break-word;
 }
 
+// 套件樣式
 ::ng-deep jw-pagination ul {
   list-style: none;
   display: flex;
@@ -92,6 +92,31 @@
   background: #007bff;
 }
 
+// media
+@media screen and (max-width: 1455px) {
+  .backgroung {
+    max-width: 1100px;
+  }
+  .footer {
+    max-width: 1100px;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .backgroung {
+    max-width: 740px;
+  }
+  .footer {
+    max-width: 740px;
+  }
+}
+@media screen and (max-width: 740px) {
+  .backgroung {
+    max-width: 380px;
+  }
+  .footer {
+    max-width: 380px;
+  }
+}
 @media screen and (max-width: 380px) {
   .backgroung {
     width: 100%;
